--- a/web/hicon/homework/templates/homework/homework.html
+++ b/web/hicon/homework/templates/homework/homework.html
@@ -7,9 +7,14 @@
 {% block content %}
   <section class="homework">
     <div class="homework__wrapper">
-      <a class="homework__item">
-        apodfiasodfijsadof
-      </a>
+      <!-- https://bakunin.com/time-management-techniques/ -->
+      <a href="{% url 'pomodoro' %}" class="homework__item">Метод Помидора</a>
+      <a href="{% url 'matrix' %}" class="homework__item">Матрица Эйзенхауэра</a>
+      <a href="{% url 'frog' %}" class="homework__item">Съесть лягушку</a>
+      <a href="{% url 'salami' %}" class="homework__item">Метод салями</a>
     </div>
   </section>
+{% endblock %}
+
+{% block javascript %}
 {% endblock %}
