--- a/web/hicon/static/css/style_promo.css
+++ b/web/hicon/static/css/style_promo.css
@@ -118,9 +118,22 @@
   }
 }
 
+/* title */
+/* header */
+/* btns */
+/* footer */
 * {
   color: #222;
   font-family: Comfortaa;
+}
+
+.title {
+  margin-bottom: 30px;
+  font-family: Comfortaa;
+  font-size: 48px;
+  line-height: 54px;
+  text-align: center;
+  color: #3129D8;
 }
 
 .btn {
@@ -142,6 +155,12 @@
   border: none;
 }
 
+.btn:hover {
+  color: #222;
+  -webkit-box-shadow: 0 0 10px 5px #D36E64;
+          box-shadow: 0 0 10px 5px #D36E64;
+}
+
 .btn_big {
   margin: 0 auto;
   width: 320px;
@@ -160,53 +179,6 @@
 .btn_big:hover img {
   -webkit-animation: down 1s linear infinite;
           animation: down 1s linear infinite;
-}
-
-.btn_log, .btn_reg {
-  margin-top: 10px;
-  font-size: 28px;
-}
-
-.btn_reg {
-  width: 290px;
-}
-
-.btn_exit {
-  margin: 0 auto;
-  margin-top: 15px;
-}
-
-.btn_add {
-  width: 180px;
-  color: #009A4D;
-  font-size: 20px;
-  margin-bottom: 15px;
-}
-
-.btn_start {
-  width: 230px;
-  color: #B9001C;
-  font-size: 20px;
-}
-
-.btn_modal {
-  width: 160px;
-  color: #009A4D;
-}
-
-.btn:hover {
-  color: #222;
-  -webkit-box-shadow: 0 0 10px 5px #D36E64;
-          box-shadow: 0 0 10px 5px #D36E64;
-}
-
-.title {
-  margin-bottom: 30px;
-  font-family: Comfortaa;
-  font-size: 48px;
-  line-height: 54px;
-  text-align: center;
-  color: #3129D8;
 }
 
 .header {
@@ -548,6 +520,15 @@
   text-shadow: 0px 0px 5px #3129D8;
 }
 
+@media (max-width: 1200px) {
+  .promo__header {
+    font-size: 48px;
+  }
+  .promo__subheader {
+    font-size: 24px;
+  }
+}
+
 @media (max-width: 991px) {
   .footer {
     height: 100%;
@@ -568,6 +549,9 @@
   .footer .row > *:last-child {
     margin-bottom: 0;
   }
+  .promo__item {
+    margin-bottom: 15px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -575,70 +559,6 @@
     text-align: center;
     line-height: 22px;
   }
-}
-
-@media (max-width: 575px) {
-  .btn {
-    width: 80px;
-  }
-  .btn_big {
-    width: 280px;
-  }
-  .btn_big:hover img {
-    -webkit-animation: none;
-            animation: none;
-  }
-  .btn_exit {
-    width: 90px;
-  }
-  .btn_add {
-    height: 40px;
-    width: 160px;
-    font-size: 18px;
-    line-height: 18px;
-  }
-  .btn_start {
-    height: 40px;
-    width: 210px;
-    font-size: 18px;
-    line-height: 42px;
-  }
-  .btn_modal {
-    width: 160px;
-  }
-  .btn:hover {
-    color: #222;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-  }
-  .header__up_auth {
-    left: 5px;
-  }
-  .header__link {
-    font-size: 20px;
-  }
-  .header__link:nth-child(2) {
-    font-size: 22px;
-    margin: 0;
-  }
-}
-
-@media (max-width: 1200px) {
-  .promo__header {
-    font-size: 48px;
-  }
-  .promo__subheader {
-    font-size: 24px;
-  }
-}
-
-@media (max-width: 991px) {
-  .promo__item {
-    margin-bottom: 15px;
-  }
-}
-
-@media (max-width: 767px) {
   .title {
     margin-bottom: 18px;
   }
@@ -660,17 +580,30 @@
 }
 
 @media (max-width: 575px) {
+  .header__up_auth {
+    left: 5px;
+  }
+  .header__link {
+    font-size: 20px;
+  }
+  .header__link:nth-child(2) {
+    font-size: 22px;
+    margin: 0;
+  }
+  .btn {
+    width: 80px;
+  }
+  .btn:hover {
+    color: #222;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
   .btn_big {
     width: 280px;
   }
   .btn_big:hover img {
     -webkit-animation: none;
             animation: none;
-  }
-  .btn:hover {
-    color: #222;
-    -webkit-box-shadow: none;
-            box-shadow: none;
   }
   .title {
     font-size: 28px;
