--- a/web/hicon/static/css/style_reglog.css
+++ b/web/hicon/static/css/style_reglog.css
@@ -1,6 +1,19 @@
+/* title */
+/* header */
+/* btns */
+/* footer */
 * {
   color: #222;
   font-family: Comfortaa;
+}
+
+.title {
+  margin-bottom: 30px;
+  font-family: Comfortaa;
+  font-size: 48px;
+  line-height: 54px;
+  text-align: center;
+  color: #3129D8;
 }
 
 .btn {
@@ -22,71 +35,21 @@
   border: none;
 }
 
-.btn_big {
-  margin: 0 auto;
-  width: 320px;
-  height: 70px;
-  font-size: 26px;
-  text-decoration: none;
-  text-transform: uppercase;
-  line-height: 80px;
-}
-
-.btn_big img {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-}
-
-.btn_big:hover img {
-  -webkit-animation: down 1s linear infinite;
-          animation: down 1s linear infinite;
-}
-
-.btn_log, .btn_reg {
-  margin-top: 10px;
-  font-size: 28px;
-}
-
-.btn_reg {
-  width: 290px;
-}
-
-.btn_exit {
-  margin: 0 auto;
-  margin-top: 15px;
-}
-
-.btn_add {
-  width: 180px;
-  color: #009A4D;
-  font-size: 20px;
-  margin-bottom: 15px;
-}
-
-.btn_start {
-  width: 230px;
-  color: #B9001C;
-  font-size: 20px;
-}
-
-.btn_modal {
-  width: 160px;
-  color: #009A4D;
-}
-
 .btn:hover {
   color: #222;
   -webkit-box-shadow: 0 0 10px 5px #D36E64;
           box-shadow: 0 0 10px 5px #D36E64;
 }
 
-.title {
-  margin-bottom: 30px;
-  font-family: Comfortaa;
-  font-size: 48px;
-  line-height: 54px;
-  text-align: center;
-  color: #3129D8;
+.btn_log {
+  margin-top: 10px;
+  font-size: 28px;
+}
+
+.btn_reg {
+  width: 290px;
+  margin-top: 10px;
+  font-size: 28px;
 }
 
 .header {
@@ -319,6 +282,12 @@
 }
 
 @media (max-width: 991px) {
+  .reg, .log {
+    width: 100%;
+  }
+  .forms {
+    padding: 28px 0;
+  }
   .footer {
     height: 100%;
     padding: 20px 0;
@@ -348,39 +317,6 @@
 }
 
 @media (max-width: 575px) {
-  .btn {
-    width: 80px;
-  }
-  .btn_big {
-    width: 280px;
-  }
-  .btn_big:hover img {
-    -webkit-animation: none;
-            animation: none;
-  }
-  .btn_exit {
-    width: 90px;
-  }
-  .btn_add {
-    height: 40px;
-    width: 160px;
-    font-size: 18px;
-    line-height: 18px;
-  }
-  .btn_start {
-    height: 40px;
-    width: 210px;
-    font-size: 18px;
-    line-height: 42px;
-  }
-  .btn_modal {
-    width: 160px;
-  }
-  .btn:hover {
-    color: #222;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-  }
   .header__up_auth {
     left: 5px;
   }
@@ -391,18 +327,14 @@
     font-size: 22px;
     margin: 0;
   }
-}
-
-@media (max-width: 991px) {
-  .reg, .log {
-    width: 100%;
+  .btn {
+    width: 80px;
   }
-  .forms {
-    padding: 28px 0;
+  .btn:hover {
+    color: #222;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
-}
-
-@media (max-width: 575px) {
   .title {
     font-size: 28px;
     line-height: 31px;
