--- a/web/hicon/homework/templates/homework/homework.html
+++ b/web/hicon/homework/templates/homework/homework.html
@@ -1,7 +1,12 @@
 {% extends 'account/account.html' %}
 {% load static %}
+
+{% block title %}
+  Домашка
+{% endblock %}
+
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/style_homework.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style_homework.min.css' %}">
 {% endblock %}
 
 {% block content %}
