--- a/web/hicon/promo/templates/layout.html
+++ b/web/hicon/promo/templates/layout.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>hicon</title>
+  <title>
+    {% block title %}
+      hicon
+    {% endblock %}
+  </title>
   <link rel="icon" href="{% static 'icons/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}">
