--- a/web/hicon/static/css/style_pomodoro.css
+++ b/web/hicon/static/css/style_pomodoro.css
@@ -1,3 +1,4 @@
+/* overlay */
 /* title */
 /* header */
 /* btns */
@@ -87,6 +88,61 @@
   color: #222;
 }
 
+.btn_pomodoro {
+  margin-bottom: 10px;
+  cursor: pointer;
+  text-align: center;
+  background-color: #BA0025;
+  color: #fff;
+  border-radius: 10px;
+  text-decoration: none;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 48px;
+  border: 1px solid #222;
+}
+
+.btn_pomodoro:hover {
+  -webkit-box-shadow: 0 0 10px 2px #ED3B60;
+          box-shadow: 0 0 10px 2px #ED3B60;
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.56);
+  z-index: 1000;
+}
+
+.modal {
+  border-radius: 10px;
+  padding: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__close {
+  cursor: pointer;
+  font-size: 48px;
+}
+
 .header {
   position: fixed;
   z-index: 10;
@@ -170,6 +226,77 @@
 .pomodoro {
   position: relative;
   top: 65px;
+  background-color: #F8E5FF;
+}
+
+.pomodoro__wrapper {
+  padding: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pomodoro__modal {
+  background-color: #fff;
+  border: 3px solid #BA0025;
+}
+
+.pomodoro__title {
+  text-align: center;
+  color: #BA0025;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
+  margin-bottom: 15px;
+}
+
+.pomodoro__subtitle {
+  text-align: center;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.pomodoro__state {
+  font-size: 32px;
+}
+
+.pomodoro__time {
+  font-size: 64px;
+  line-height: 64px;
+  color: #BA0025;
+}
+
+.pomodoro__counter {
+  list-style-type: none;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.pomodoro__item {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #888;
+}
+
+.pomodoro__item_done {
+  background-color: #06E140;
 }
 
 @media (max-width: 575px) {
