--- a/web/hicon/static/css/style_account.css
+++ b/web/hicon/static/css/style_account.css
@@ -1,3 +1,4 @@
+/* overlay */
 /* title */
 /* header */
 /* btns */
@@ -22,7 +23,6 @@
   font-size: 24px;
   font-weight: 700;
   line-height: 48px;
-  outline: none;
   border: none;
 }
 
@@ -366,11 +366,28 @@
 
 .list__text {
   margin-bottom: 0;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 .list__date {
+  color: #FF9A90;
+}
+
+.list__type {
+  color: #222;
+  font-size: 24px;
+}
+
+.list__type[data-type="1"], .list__type[data-type="3"] {
   color: red;
+}
+
+.list__type[data-type="2"] {
+  color: #00A530;
+}
+
+.list__type[data-type="5"] {
+  color: #777;
 }
 
 .list__img {
@@ -504,7 +521,7 @@
   .list__wrapper {
     width: 100%;
   }
-  .list__hw, .list__date {
+  .list__text, .list__type {
     font-size: 16px;
   }
   .list__item {
