--- a/web/hicon/static/css/style_matrix.css
+++ b/web/hicon/static/css/style_matrix.css
@@ -1,3 +1,4 @@
+/* overlay */
 /* title */
 /* header */
 /* btns */
@@ -87,6 +88,40 @@
   color: #222;
 }
 
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.56);
+  z-index: 1000;
+}
+
+.modal {
+  border-radius: 10px;
+  padding: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__close {
+  cursor: pointer;
+  font-size: 48px;
+}
+
 .header {
   position: fixed;
   z-index: 10;
@@ -170,6 +205,141 @@
 .matrix {
   position: relative;
   top: 65px;
+}
+
+.matrix__modal {
+  background-color: #fff;
+  border: 3px solid #D6C3F1;
+}
+
+.matrix__block, .matrix__none {
+  text-align: center;
+  padding: 10px;
+}
+
+.matrix__name {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.matrix__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.matrix__none .matrix__wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.matrix__item {
+  padding: 10px;
+  border: 2px solid #222;
+  border-radius: 10px;
+  margin: 5px 5px 0 0;
+}
+
+.matrix__block[data-type="1"] {
+  border: 3px solid #D6C3F1;
+  border-top: none;
+  border-left: none;
+  background-color: #E5FFFF;
+}
+
+.matrix__block[data-type="1"] .matrix__name, .matrix__block[data-type="1"] .matrix__date {
+  color: #ED1B29;
+}
+
+.matrix__block[data-type="1"] .matrix__item {
+  border: 2px solid #ED1B29;
+}
+
+.matrix__block[data-type="2"] {
+  border: 3px solid #D6C3F1;
+  border-top: none;
+  border-right: none;
+  background-color: #F3F3D8;
+}
+
+.matrix__block[data-type="2"] .matrix__name, .matrix__block[data-type="2"] .matrix__date {
+  color: #1BC04B;
+}
+
+.matrix__block[data-type="2"] .matrix__item {
+  border: 2px solid #1BC04B;
+}
+
+.matrix__block[data-type="3"] {
+  border: 3px solid #D6C3F1;
+  border-bottom: none;
+  border-left: none;
+  background-color: #C9FFED;
+}
+
+.matrix__block[data-type="3"] .matrix__name, .matrix__block[data-type="3"] .matrix__date {
+  color: #F38518;
+}
+
+.matrix__block[data-type="3"] .matrix__item {
+  border: 2px solid #F38518;
+}
+
+.matrix__block[data-type="4"] {
+  border: 3px solid #D6C3F1;
+  border-bottom: none;
+  border-right: none;
+  background-color: #EEEADF;
+}
+
+.matrix__block[data-type="4"] .matrix__name, .matrix__block[data-type="4"] .matrix__date {
+  color: #5A564B;
+}
+
+.matrix__block[data-type="4"] .matrix__item {
+  border: 2px solid #5A564B;
+}
+
+.matrix__none .matrix__name, .matrix__none .matrix__date {
+  color: #222;
+}
+
+.matrix__none .matrix__item {
+  border: 2px solid #222;
+}
+
+.matrix__title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
+  margin-bottom: 15px;
+  color: #222;
+}
+
+.matrix__subtitle {
+  text-align: center;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+@media (max-width: 767px) {
+  .matrix__block[data-type="1"], .matrix__block[data-type="2"], .matrix__block[data-type="3"], .matrix__block[data-type="4"] {
+    border: 2px solid #D6C3F1;
+  }
+  .matrix__block[data-type="1"] {
+    margin-top: 10px;
+  }
 }
 
 @media (max-width: 575px) {
