add notes and weekdays

--- a/web/hicon/homework/templates/homework/homework.html
+++ b/web/hicon/homework/templates/homework/homework.html
@@ -15,8 +15,7 @@
       <!-- https://bakunin.com/time-management-techniques/ -->
       <a href="{% url 'pomodoro' %}" class="homework__item">Метод Помидора</a>
       <a href="{% url 'matrix' %}" class="homework__item">Матрица Эйзенхауэра</a>
-      <a href="{% url 'frog' %}" class="homework__item">Съесть лягушку</a>
-      <a href="{% url 'salami' %}" class="homework__item">Метод салями</a>
+      <a href="{% url 'notes' %}" class="homework__item">Заметки</a>
     </div>
   </section>
 {% endblock %}
