--- a/web/hicon/account/templates/account/account.html
+++ b/web/hicon/account/templates/account/account.html
@@ -58,14 +58,14 @@
             <div class="list__homeworks">
               <div class="container-fluid">
                 <div class="row">
-                  {% for hw, type, date, ind, data_matrix in hws %}
+                  {% for hw, type, date, wd, ind, data_matrix in hws %}
                     <div class="col-12 list__col">
                         <div class="list__full">
                           <div class="list__btns">
                             <a href="{% url 'complete' pk=id index=ind %}"><img src="{% static 'icons/check.svg' %}" class="list__img" alt="check"></a>
                             <a href="{% url 'change' pk=id index=ind %}"><img src="{% static 'icons/cog.svg' %}" class="list__img" alt="check"></a>
                           </div>
-                          <p class="list__text"><span class="list__hw">{{ hw }}</span> - <span class="list__date">{{ date }}</span></p>
+                          <p class="list__text"><span class="list__hw">{{ hw }}</span> - <span class="list__date">{{ date }}</span><span class="list__day">({{ wd }})</span></p>
                           <p class="list__type" data-type="{{ data_matrix }}">{{ type }}</p>
                         </div>
                     </div>
